# json-proof-token

./: .gitignore  Cargo.toml  README.md
decoder/: jpt_decoder.html
docs/: index.html
examples/: jpt.rs
src/: encoding.rs  errors.rs  flattening.rs  lib.rs  validation.rs
src/jpa/: algs.rs  bbs.rs  bbs_plus.rs  mac.rs  mod.rs  su.rs
src/jpt/: claims.rs  mod.rs  payloads.rs
src/jwk/: alg_parameters.rs  curves.rs  key.rs  mod.rs  set.rs  types.rs  utils.rs
src/jwp/: algs.rs  header.rs  issued.rs  mod.rs  presented.rs
