[package]
name = "json-proof-token"
version = "0.4.1"
edition = "2021"
authors = ["LINKS Foundation"]
repository = "https://github.com/Cybersecurity-LINKS/json-proof-token"
description = """A library implementation based on the new JOSE Working Group draft specifications: 
JSON Web Proof (JWP), JSON Proof Token (JPT) and JSON Proof Algorithm (JPA)."""
keywords = [ "jose", "jwp", "jpt", "jwk", "zero-knowledge" ]
categories = [ "cryptography", "authentication" ]
license = "Apache-2.0"
rust-version = "1.65"

[dependencies]
serde = { version = "1.0.25", default_feature = false, features = ["derive", "serde_derive"] }
serde_json = {version = "1.0.59", features = ["preserve_order"]}
data-encoding = "2.4.0"
indexmap = {version = "2.8.0", features = ["serde"]}
thiserror = "1.0.57"
zkryptium = "0.4.0"
json-unflattening = "0.1.5"

[lib]
name = "jsonprooftoken"
path = "src/lib.rs"

[[example]]
name = "jpt"
path = "examples/jpt.rs"
